--- a/JobTrackerToolBusiness/JobTracker.Business.csproj
+++ b/JobTrackerToolBusiness/JobTracker.Business.csproj
@@ -5,10 +5,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>JobTracker.Business</AssemblyName>
+    <RootNamespace>JobTracker.Business</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
   </ItemGroup>
 
 </Project>
