Cleaned up a lot of previous code

--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=MyDatabase; Integrated Security=True"
+    "DefaultConnection": "Server=(local);Database=JobTracker01; Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
