--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=JobTracker01; Integrated Security=True"
+    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
   },
   "AllowedHosts": "*"
 }
