lots of fixes, removed a lot of old things, added new classes to stop a cylic issue

--- a/JobTracker.API.Tool/JobTracker.API.Tool.csproj
+++ b/JobTracker.API.Tool/JobTracker.API.Tool.csproj
@@ -25,7 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JobTrackerToolBusiness\JobTracker.Business.csproj" />
+    <ProjectReference Include="..\JobData\JobData.csproj" />
+    <ProjectReference Include="..\JobTracker.Business\JobTracker.Business.csproj" />
   </ItemGroup>
 
 </Project>
