--- a/JobTracker.API.Tool/JobTracker - Backup.API.Tool.csproj
+++ b/JobTracker.API.Tool/JobTracker - Backup.API.Tool.csproj
@@ -1,12 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>JobTracker.Business</AssemblyName>
-    <RootNamespace>JobTracker.Business</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <AssemblyName>JobTracker.API.Tool</AssemblyName>
+    <RootNamespace>JobTracker.API.Tool</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,5 +23,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.9.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JobData\JobData.csproj" />
+    <ProjectReference Include="..\JobTracker.Business\JobTracker.Business.csproj" />
+    <proProjectReProjectReference<ProjectReference xmlns="http://schemas.microsoft.com/developer/msbuild/2003"></ProjectReference> xmlns="http://schemas.microsoft.com/developer/msbuild/2003"<ProjectReference ProjectReference Include="..\JobTracker.Data\JobTracker.Data.csproj" />
+  </ItemGroup>
+
 
 </Project>
