--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
+  },
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "http://localhost:3001",
+    "http://locahost:5001"
+  ],
   "AllowedHosts": "*"
 }
