Login now works, job profile drop now works, and the table now works.

--- a/Login.Business/Login.Business.csproj
+++ b/Login.Business/Login.Business.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobData\JobData.csproj" />
+  </ItemGroup>
+
 </Project>
