--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:4200",
             "sourceMaps": true,
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}",
+            "trace": true
         },
         {
             "type": "firefox",
