added custom employer snackbar to save and cancel, maybe use later, added requirements and tooltips to help user navigate creating employer profiles

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:4200",
-            "sourceMaps": true,
             "webRoot": "${workspaceFolder}",
-            "trace": true
+            "sourceMaps": true,
+            "trace": true,
         },
         {
             "type": "firefox",
