--- a/JobTrackerApp/angular.json
+++ b/JobTrackerApp/angular.json
@@ -40,6 +40,17 @@
             "ssr": false
           },
           "configurations": {
+            "local": {
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.local.ts"
+              }
+            ],
+            "optimization": false,
+            "sourceMap": true,
+            "namedChunks": true
+          },
             "production": {
               "budgets": [
                 {
@@ -67,6 +78,7 @@
               ]
             }
           },
+          
           "defaultConfiguration": "production"
         },
         "serve": {
