--- a/.github/workflows/JobTrackerAPITool.yml
+++ b/.github/workflows/JobTrackerAPITool.yml
@@ -9,6 +9,7 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
   WORKING_DIRECTORY: JobTracker.API.Tool
+  PROJECT_FILE_PATH: JobTracker.API.Tool/JobTracker.API.Tool.csproj
 jobs:
   build:
     runs-on: windows-latest
