--- a/.github/workflows/JobTrackerAPITool.yml
+++ b/.github/workflows/JobTrackerAPITool.yml
@@ -45,6 +45,9 @@ jobs:
       uses: azure/login@v2
       with:
         creds: ${{ secrets.JobTrackerAPITool_SPN }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
