--- a/.github/workflows/JobTrackerAPITool.yml
+++ b/.github/workflows/JobTrackerAPITool.yml
@@ -48,6 +48,7 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
