--- a/JobTrackerApp/angular.json
+++ b/JobTrackerApp/angular.json
@@ -51,6 +51,15 @@
             "sourceMap": true,
             "namedChunks": true
           },
+          "prod": {
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }
+            ],
+            "outputHashing": "all"
+          },
             "production": {
               "budgets": [
                 {
