Commit made from VS Code Azure Static Web Apps

--- a/JobTrackerApp/angular.json
+++ b/JobTrackerApp/angular.json
@@ -72,7 +72,7 @@
               "sourceMap": false,
               "namedChunks": false,
               "aot": true,
-              "extractLicenses": true,
+              "extractLicenses": true
             },
             "development": {
               "optimization": false,
