--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
+    //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+    "DefaultConnection":"Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTracker01;Persist Security Info=False;User ID=xiongjai;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "AllowedOrigins": [
     "http://localhost:4200",
