--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -6,15 +6,15 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
-    "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTracker01;Persist Security Info=False;User ID=xiongjai;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    // "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+    "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=jobtracker01;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
   },
   "AllowedOrigins": [
     "http://localhost:4200",
     "https://localhost:4200",
     "http://localhost:3001",
     "https://localhost:3001",
-    "http://locahost:5001",
+    "http://localhost:5001",
     "https://localhost:5001"
   ],
   "AllowedHosts": "*"
