--- a/JobTrackerApp/package.json
+++ b/JobTrackerApp/package.json
@@ -5,9 +5,14 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --output-path=C:/JobTrackerApp/JobApp",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:JobTrackerApp": "node dist/job-tracker-app/server/server.mjs"
+    "serve:ssr:JobTrackerApp": "node dist/job-tracker-app/server/server.mjs",
+    "stop:iis": "powershell Stop-Service -Name 'W3SVC'",
+    "start:iis": "powershell Start-Service -Name 'W3SVC'",
+    "stop:iis-and-build:prod-and-start:iis": "powershell Stop-Service -Name 'W3SVC' && ng build --configuration production --output-path=C:/JobTrackerApp/JobApp && powershell Start-Service -Name 'W3SVC'",
+    "stop:iis-and-build:dev-and-start:iis": "powershell Stop-Service -Name 'W3SVC' && ng build --configuration development --output-path=C:/JobTrackerApp/JobApp && powershell Start-Service -Name 'W3SVC'"
   },
   "private": true,
   "dependencies": {
