--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -9,6 +9,12 @@
     // "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
     "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=jobtracker01;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
   },
+  "Jwt": {
+    "Key": "${JWT_SECRET_KEY}",
+    "Issuer": "Test.com",
+    "Audience": "TestAudience",
+    "ExpiresInMinutes": 15
+  },
   "AllowedOrigins": [
     "http://localhost:4200",
     "https://localhost:4200",
