--- a/JobTracker.API.Tool/JobTracker.API.Tool.csproj
+++ b/JobTracker.API.Tool/JobTracker.API.Tool.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JobTracker.Business\JobTracker.Business.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
