--- a/Login.Business/Login.Business.csproj
+++ b/Login.Business/Login.Business.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JobData\JobData.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
