started implementing refresh token, validing if token is legit and sending back token

--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -13,7 +13,9 @@
     "Key": "${JWT_SECRET_KEY}",
     "Issuer": "Test.com",
     "Audience": "TestAudience",
-    "ExpiresInMinutes": 15
+    "ExpiresInMinutes": 15,
+    "RefreshExpiresInMinutes": 1080
+
   },
   "AllowedOrigins": [
     "http://localhost:4200",
