--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobData\JobData.csproj" />
+  </ItemGroup>
+
 </Project>
