Doing major overhaul of how exceptions are handled. Using operationResults now to improve performance for simple service calls. Created multiple custom exceptions and utility formatters for improved readability. Started working on login validation to make sure user types email.

--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -2,11 +2,23 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "Console": {
+    "LogLevel": {
+      "Default": "Information"
+    }
+  },
+  "Debug": {
+    "LogLevel": {
+      "Default": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
     //"DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=jobtracker01;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
   },
   "Jwt": {
