--- a/JobTracker.Business/JobTracker.Business.csproj
+++ b/JobTracker.Business/JobTracker.Business.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JobData\JobData.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
