--- a/JobTracker.Business/JobTracker.Business.csproj
+++ b/JobTracker.Business/JobTracker.Business.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="itext7" Version="9.0.0" />
+    <PackageReference Include="itext7.bouncy-castle-fips-adapter" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
       <PrivateAssets>all</PrivateAssets>
@@ -23,6 +24,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
+    <PackageReference Include="Verifiable.BouncyCastle" Version="0.0.2" />
   </ItemGroup>
 
   <ItemGroup>
