--- a/JobTrackerApp/package.json
+++ b/JobTrackerApp/package.json
@@ -29,6 +29,7 @@
     "@angular/ssr": "^18.2.11",
     "@auth0/angular-jwt": "^5.2.0",
     "express": "^4.18.2",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
