--- a/.github/workflows/JobTrackerAPITool.yml
+++ b/.github/workflows/JobTrackerAPITool.yml
@@ -7,9 +7,10 @@ env:
   AZURE_WEBAPP_NAME: JobTrackerAPITool
   AZURE_WEBAPP_PACKAGE_PATH: JobTracker.API.Tool\publish
   CONFIGURATION: Release
-  DOTNET_CORE_VERSION: 8.0.x
+  DOTNET_CORE_VERSION: 9.0.x
   WORKING_DIRECTORY: JobTracker.API.Tool
   PROJECT_FILE_PATH: JobTracker.API.Tool/JobTracker.API.Tool.csproj
+  ASPNETCORE_ENVIRONMENT: Development
 jobs:
   build:
     runs-on: windows-latest
