made a change to create xml for apis

--- a/JobTracker.API.Tool/JobTracker.API.Tool.csproj
+++ b/JobTracker.API.Tool/JobTracker.API.Tool.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>JobTracker.API.Tool</AssemblyName>
     <RootNamespace>JobTracker.API.Tool</RootNamespace>
     <BaseOutputPath></BaseOutputPath>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
