--- a/.github/workflows/JobTrackerAPITool1.yml
+++ b/.github/workflows/JobTrackerAPITool1.yml
@@ -37,6 +37,12 @@ jobs:
         run: dotnet restore ${{ env.PROJECT_FILE_PATH }} # Specify the project file path
       - name: Build
         run: dotnet build ${{ env.PROJECT_FILE_PATH }} --configuration ${{ env.CONFIGURATION }} --no-restore # Specify the project file path
+      - name: Verify Build Output
+        run: |
+           dir "${{ env.WORKING_DIRECTORY }}\bin\Release\net9.0\"
+      - name: Print DLL Path
+        run: |
+            echo "DLL Path: ${{ env.WORKING_DIRECTORY }}\bin\Release\net9.0\${{ env.PROJECT_FILE_PATH.Split('/')[-1].Replace('.csproj', '.dll') }}"
       - name: Test
         run: dotnet test ${{ env.PROJECT_FILE_PATH }} --no-build # Specify the project file path
       - name: Publish
@@ -45,7 +51,7 @@ jobs:
         run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: Generate Open API Specification Document
-        run: swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}" # Specify the Program class
+        run: dotnet swagger tofile --output "${{ github.workspace }}\${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ github.workspace }}\${{ env.WORKING_DIRECTORY }}\bin\Release\net9.0\${{ env.PROJECT_FILE_PATH.Split('/')[-1].Replace('.csproj', '.dll') }}" "v1"
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: Publish Artifacts
         uses: actions/upload-artifact@v4
