--- a/.github/workflows/JobTrackerAPITool1.yml
+++ b/.github/workflows/JobTrackerAPITool1.yml
@@ -50,8 +50,12 @@ jobs:
       - name: Install Swashbuckle CLI .NET Global Tool
         run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
+      - name: Install Swashbuckle CLI .NET Global Tool
+        run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+
       - name: Generate Open API Specification Document
-        run: dotnet swagger tofile --output "JobTracker.API.Tool\publish\swagger.json" --project "JobTracker.API.Tool\JobTracker.API.Tool.csproj" "JobTracker.API.Tool\bin\Release\net9.0\JobTracker.API.Tool.dll" "v1"
+        run: swagger tofile --output "JobTracker.API.Tool\publish\swagger.json" --project "JobTracker.API.Tool\JobTracker.API.Tool.csproj" "JobTracker.API.Tool\bin\Release\net9.0\JobTracker.API.Tool.dll" "v1"
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: Publish Artifacts
         uses: actions/upload-artifact@v4
