Added serilog to write to it's API folder with information level msgs, warnings, errors and criticals.

--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -7,6 +7,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "Console": {
     "LogLevel": {
       "Default": "Information"
