Updated dbcreation connection string, fixed some bugs related to jwt token being changed. updated azure connection string

--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -33,9 +33,7 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
-    "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=jobtracker01;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
-    //"DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=jobtracker01;Persist Security Info=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
-
+    "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTrackingAppAzureDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
   },
   "Jwt": {
     "Key": "${JWT_SECRET_KEY}",
