Did work on email service feature

--- a/Login.API/appsettings.Development.json
+++ b/Login.API/appsettings.Development.json
@@ -22,8 +22,17 @@
       }
     ]
   },
+  "SMTP2Go": {
+    "Host": "mail.smtp2go.com",
+    "Port": 2525,
+    "EnableSsl": true,
+    "Username": "${EMAIL_USERNAME}",
+    "Password": "${EMAIL_PASSWORD}",
+    "FromEmail": "${EMAIL_DOMAIN}",
+    "FromName": "${Admin}"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
 
     //this is for local development, not for azure devops pipeline
     //"DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTrackingAppAzureDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
