--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -22,6 +22,15 @@
       }
     ]
   },
+  "SMTP2Go": {
+    "Host": "mail.smtp2go.com",
+    "Port": 2525,
+    "EnableSsl": true,
+    "Username": "${EMAIL-USERNAME}",
+    "Password": "${EMAIL-PASSWORD}",
+    "FromEmail": "${EMAIL-DOMAIN}",
+    "FromName": "${Admin}"
+  },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
     "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Database=JobTrackingAppAzureDB;Authentication=Active Directory Managed Identity;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
