Email is now sending via smtp, added settings for local and azure (may need to adjust later).

--- a/Login.API/appsettings.Development.json
+++ b/Login.API/appsettings.Development.json
@@ -29,10 +29,15 @@
     "Username": "${EMAIL_USERNAME}",
     "Password": "${EMAIL_PASSWORD}",
     "FromEmail": "${EMAIL_DOMAIN}",
-    "FromName": "${Admin}"
+    //"FromName": "${noreply@xiongjai.com}",
+    "FromName": "noreply@xiongjai.com"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
+    //laptop
+    //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+
+    //PC
+    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
 
     //this is for local development, not for azure devops pipeline
     //"DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTrackingAppAzureDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
