--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -29,7 +29,8 @@
     "Username": "${EMAIL-USERNAME}",
     "Password": "${EMAIL-PASSWORD}",
     "FromEmail": "${EMAIL-DOMAIN}",
-    "FromName": "${Admin}"
+    //"FromName": "${noreply@xiongjai.com}",
+    "FromName": "noreply@xiongjai.com"
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
