--- a/JobTracker.API.Tool/appsettings.Development.json
+++ b/JobTracker.API.Tool/appsettings.Development.json
@@ -34,6 +34,10 @@
     "Microsoft.EntityFrameworkCore": "Warning"
   },
   "ConnectionStrings": {
+    //laptop
+    //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+
+    //PC
     "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
 
     //this is for local development, not for azure devops pipeline
