Fixed some settings for email services, also fixed unittests that were now failing. Added an dev setting to check if prod or debug. Added a copilot instruction

--- a/Login.API/appsettings.Development.json
+++ b/Login.API/appsettings.Development.json
@@ -28,9 +28,7 @@
     "EnableSsl": true,
     "Username": "${EMAIL_USERNAME}",
     "Password": "${EMAIL_PASSWORD}",
-    "FromEmail": "${EMAIL_DOMAIN}",
-    //"FromName": "${noreply@xiongjai.com}",
-    "FromName": "noreply@xiongjai.com"
+    "FromEmail": "${EMAIL_DOMAIN}"
   },
   "ConnectionStrings": {
     //laptop
