--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -28,9 +28,7 @@
     "EnableSsl": true,
     "Username": "${EMAIL-USERNAME}",
     "Password": "${EMAIL-PASSWORD}",
-    "FromEmail": "${EMAIL-DOMAIN}",
-    //"FromName": "${noreply@xiongjai.com}",
-    "FromName": "noreply@xiongjai.com"
+    "FromEmail": "${EMAIL-DOMAIN}"
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
