configured azure vault for smtp

--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -42,6 +42,9 @@
     "RefreshExpiresInMinutes": 1080
 
   },
+  "KeyVaultEndpoint": {
+        "KeyVaultUri": "https://jobtracker01-kv.vault.azure.net/"
+  },
   "AllowedOrigins": [
     "https://jobtrackerapi-dte7aza2fvgfgaes.centralus-01.azurewebsites.net",
     "https://jobtrackerloginapi.azurewebsites.net",
