fixed an error in the vault uri

--- a/JobTracker.API.Tool/appsettings.json
+++ b/JobTracker.API.Tool/appsettings.json
@@ -42,6 +42,9 @@
     "Audience": "TestAudience",
     "ExpiresInMinutes": 15
   },
+  "KeyVaultEndpoint": {
+    "KeyVaultUri": "https://jobappvault.vault.azure.net/"
+  },
   "AllowedOrigins": [
     "https://jobtrackerapi-dte7aza2fvgfgaes.centralus-01.azurewebsites.net",
     "https://jobtrackerloginapi.azurewebsites.net",
