--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -43,7 +43,7 @@
 
   },
   "KeyVaultEndpoint": {
-        "KeyVaultUri": "https://jobtracker01-kv.vault.azure.net/"
+    "KeyVaultUri": "https://jobappvault.vault.azure.net/"
   },
   "AllowedOrigins": [
     "https://jobtrackerapi-dte7aza2fvgfgaes.centralus-01.azurewebsites.net",
