Updated db migration to add new email confirmation table, fixed some dbcontext constructor issue with commandlinetool, implemented email with confirm link to call API

--- a/Login.API/appsettings.Development.json
+++ b/Login.API/appsettings.Development.json
@@ -30,12 +30,16 @@
     "Password": "${EMAIL_PASSWORD}",
     "FromEmail": "${EMAIL_DOMAIN}"
   },
+  "EmailConfirmation": {
+    "BaseUrl": "https://localhost:3001",
+    "Path": "/login/confirm-email"
+  },
   "ConnectionStrings": {
     //laptop
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
 
     //PC
-    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
 
     //this is for local development, not for azure devops pipeline
     //"DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTrackingAppAzureDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
