--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -30,6 +30,10 @@
     "Password": "",
     "FromEmail": ""
   },
+  "EmailConfirmation": {
+    "BaseUrl": "https://jobtracker.dev",
+    "Path": "/login/confirm-email"
+  },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
     "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Database=JobTrackingAppAzureDB;Authentication=Active Directory Managed Identity;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
