--- a/CommandLineTool/CommandLineTool.csproj
+++ b/CommandLineTool/CommandLineTool.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\JobTracker.Business\JobTracker.Business.csproj" />
   </ItemGroup>
 
