updated settings for login

--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -31,7 +31,7 @@
     "FromEmail": ""
   },
   "EmailConfirmation": {
-    "BaseUrl": "https://jobtracker.dev",
+    "BaseUrl": "https://www.jobtracker.dev",
     "Path": "/login/confirm-email"
   },
   "ConnectionStrings": {
