--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -9,10 +9,15 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": "Information",
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
@@ -35,7 +40,6 @@
     "Path": "/login/confirm-email"
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
     "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Database=JobTrackingAppAzureDB;Authentication=Active Directory Managed Identity;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
@@ -44,7 +48,6 @@
     "Audience": "TestAudience",
     "ExpiresInMinutes": 15,
     "RefreshExpiresInMinutes": 1080
-
   },
   "KeyVaultEndpoint": {
     "KeyVaultUri": "https://jobappvault.vault.azure.net/"
@@ -55,5 +58,15 @@
     "https://yellow-desert-0e13a9910.4.azurestaticapps.net",
     "https://www.jobtracker.dev"
   ],
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "jai123hotmail.onmicrosoft.com",
+    "TenantId": "5d54e111-b859-4ae3-a6d7-68d3394a4cbc",
+    "ClientId": "57e608a4-c457-42ce-825e-fc46a80e9dcf",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": "user.read",
+    "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
+    "ClientCertificates": []
+  }
 }
