--- a/JobTrackerApp/package.json
+++ b/JobTrackerApp/package.json
@@ -29,6 +29,8 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
     "@auth0/angular-jwt": "^5.2.0",
+    "@azure/msal-angular": "^4.0.18",
+    "@azure/msal-browser": "^4.20.0",
     "express": "^4.18.2",
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
